refactor(auth): implement logic from commit 58694d7 in news route
